# mini-mlops

./: .gitignore  .gitignore.swp  MANIFEST.in  README.md  setup.cfg  setup.py
mlopskit/: __init__.py  api.py  build_context.py  cli.py  config.py  init_db.py  log_base.py  pipe.py
mlopskit/assets/: cli.py  remote.py
mlopskit/assets/drivers/: gcs.py  retry.py
mlopskit/ext/: __init__.py
mlopskit/ext/abtest/: analysis.py  api.py  config.py  db.py  metrics.py  models.py  py3helpers.py  server.py  utils.py
mlopskit/ext/dpipe/: api.py  exceptions.py  pipe.py  utils.py
mlopskit/ext/gitkit/: add.py  branch.py  config.py  create.py  file.py  gitRepository.py  hash.py  index.py  log.py  ref.py  rm.py
mlopskit/ext/prompts/: base.py  prompt.py
mlopskit/ext/shellkit/: __init__.py  archiving.py  command.py  fileio.py  filesystem.py  path.py
mlopskit/ext/sql_formatter/: core.py  format_file.py  utils.py  validation.py
mlopskit/ext/templates/: README.md  ServerFile.j2  config.py  open_debug_db.py  recomserver.py  rewardserver.py  serving.py
mlopskit/ext/zulu/: __init__.py  api.py  delta.py  parser.py  zulu.py
mlopskit/io/: core.py  sfdb.py
mlopskit/pastry/: __init__.py  dam.py  data_store.py  loop.py  model_store.py  template.py  types.py  utils.py
mlopskit/pastry/api/: __init__.py  client.py  colorize.py  error.py  registration.py  server.py  template.py  util.py
mlopskit/pastry/mlflow_rest_client/: __init__.py  artifact.py  experiment.py  internal.py  mlflow_rest_client.py  model.py  page.py  run.py  tag.py  timestamp.py
mlopskit/server/: __init__.py  __main__.py
mlopskit/server/models/: __init__.py  database.py  errors.py  feature_store.py  featureinit.py  mlmonitorinit.py  models.py  (+2 more)
mlopskit/testing/: tf_serving.py
mlopskit/utils/: __init__.py  autowait.py  console_util.py  exceptions.py  file_utils.py  git_utils.py  killport.py  loadobj.py  logger.py  math_util.py  pipe_utils.py  read_log.py  rest_utils.py  shell_utils.py
(+95 files in other folders)
