[bumpversion]
current_version = 2.0.2
commit = True
tag = True

[metadata]
name = mlopskit
description = Machine learning lib.
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
home-page = https://idpy.org
project_urls = 
	Bug Tracker = https://github.com/leepand/mini-mlops/mlopskit/issues
	Source Code = https://github.com/leepand/mini-mlops/mlopskit

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	aiohttp
	asgiref
	boto3
	cachetools
	click
	filelock
	#google-cloud-storage
	azure-storage-blob
	humanize
	pydantic
	python-dateutil
	redis
	rich
	sniffio
	structlog
	tenacity
	typing_extensions
	tabulate
	Babel>=2.3.4
    iso8601>=0.1.11
    python-dateutil>=2.6.0
    pytimeparse>=1.1.5

[options.extras_require]
tensorflow = 
	tensorflow
	grpcio
	tensorflow
	tensorflow-serving-api
cli = 
	networkx
	memory-profiler
	fastapi
	uvicorn
api = 
	fastapi
	uvicorn

[options.packages.find]
where = .
exclude = 
	tests

[options.package_data]
mlopskit = py.typed

[tool:pytest]
addopts = 
	--strict
	--verbose
	--tb=native
	-vv
	--failed-first
	--disable-warnings
	--durations 10
	--color=yes
	tests

[tool:isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203

[coverage:run]
source = mlopskit
omit = 
	mlopskit/assets/cli.py
	mlopskit/cli.py

[coverage:report]
fail_under = 90
precision = 2

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy

[mypy-azure.storage.blob.*]
ignore_errors = True

[options.entry_points]
console_scripts = 
	mlopskit = mlopskit.cli:mlopskit_cli

[bumpversion:file:mlopskit/__init__.py]

[bumpversion:file:setup.py]
